web-infras/parser/tests/fixtures/babel/es2018/async-generators/for-await-no-semi-3/output.txt
[SyntaxError]: when await in for loop, it can only be in for of loop (2,7)
2|  for await (x = 0;false;);
 |     ^
